update form styles

--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
                         <textarea class="form-control" id="exampleFormControlTextarea1" name="mensaje" rows="3"
                             required></textarea>
                     </div>
-                    <input type="submit" class="btn btn-primary" id="button" value="PEDIR PRESUPUESTO">
+                    <div class="mb-3 center">
+                        <input type="submit" class="btn btn-primary center" id="button" value="PEDIR PRESUPUESTO">
+                    </div>
                 </form>
             </div>
         </div>
