--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaqueries.css">
     <title>Pragma - Plomería</title>
@@ -111,7 +112,7 @@
     </section>
     <section id="presupuesto" class="center">
         <div class="card card-services" style="width: 90%;">
-            <div class="card-body title-services">¡Pedí tu presupuesto sin cargo!</div>
+            <div class="card-body title-services">¿Quiénes somos?</div>
             <div class="card-body">
                 <form id="form">
                     <div class="mb-3">
@@ -138,6 +139,68 @@
             </div>
         </div>
     </section>
+    <section id="nosotros" class="center">
+        <div class="card card-services" style="width: 90%;">
+            <div class="card-body title-services">¿Quiénes somos?</div>
+            <div class="card-body">
+                <ul class="list-group">
+                    <li class="list-group-item us-item">
+                        Formamos una empresa en la cual combinamos un servicio de calidad, con precios altamente
+                        competitivos.
+                    </li>
+                    <li class="list-group-item us-item">
+                        Realizando trabajos con compromiso, puntualidad y responsabilidad.
+                    </li>
+                    <li class="list-group-item us-item">
+                        Servicios en todo CABA, Argentina.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="contacto" class="center">
+        <div class="card card-services" style="width: 90%;">
+            <div class="card-body title-services">¡Contactanos!</div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col center">
+                        <ul class="list-group">
+                            <li class="list-group-item contact-item">Teléfonos:
+                            </li>
+                            <li class="list-group-item contact-item">+54 9 11 2351-1146
+                            </li>
+                            <li class="list-group-item contact-item">+54 9 11 2241-0473
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col center">
+                        <ul class="list-group">
+                            <li class="list-group-item contact-item">Whatsapp:
+                            </li>
+                            <li class="list-group-item center wp-item">
+                                <a target="_blank" href="https://walink.co/220607"><img class="wp"
+                                        src="./assets/whatsapp.png"></a>
+                            </li>
+                            <li class="list-group-item center wp-item">
+                                <a target="_blank" href="https://walink.co/2e8624"><img class="wp"
+                                        src="./assets/whatsapp.png"></a>
+                            </li>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul class="list-group center">
+                        <li class="list-group-item center e-mail-item contact-item">plomeriapragma@gmail.com</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <a href="https://walink.co/220607" class="float" target="_blank">
+        <i class="fa fa-whatsapp my-float"></i>
+    </a>
+    <footer class="center">
+        Powered by Lautaro Quevedo
+    </footer>
 
     <script src="script.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
