--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="#">INICIO</a></li>
+                <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#servicios">SERVICIO</a></li>
                 <li><a href="#presupuesto">PRESUPUESTO</a></li>
-                <li><a href="#nosotros">NOSOTROS</a></li>
                 <li><a href="#contacto">CONTACTO</a></li>
             </ul>
         </div>
@@ -48,16 +48,27 @@
                     <p class="card-text card-text2">GARANTÍA ASEGURADA.</p>
                 </div>
             </div>
-            <div class="card card2">
-                <div class="card-body card-body2">
-                    <h5 class="card-title card-title2">¡Consultanos por presupuesto ya!</h5>
-                    <a target="_blank" href="https://wa.link/40h94q"><img class="redes" src="./assets/whatsapp.png"
-                            alt="whatsapp"></a>
-                </div>
-            </div>
         </div>
     </div>
-
+    <section id="nosotros" class="center">
+        <div class="card card-services" style="width: 90%;">
+            <div class="card-body title-services">¿Quiénes somos?</div>
+            <div class="card-body">
+                <ul class="list-group">
+                    <li class="list-group-item us-item">
+                        Formamos una empresa en la cual combinamos un servicio de calidad, con precios altamente
+                        competitivos.
+                    </li>
+                    <li class="list-group-item us-item">
+                        Realizando trabajos con compromiso, puntualidad y responsabilidad.
+                    </li>
+                    <li class="list-group-item us-item">
+                        Servicios en todo CABA, Argentina.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <section id="servicios" class="center">
         <div class="card card-services" style="width: 90%;">
             <div class="card-body title-services">¿Qué servicios ofrecemos?</div>
@@ -79,7 +90,8 @@
                                     alt="check"> Tanques y colectores</li>
                             <li class="list-group-item service-item"><img class="check" src="./assets/checked.png"
                                     alt="check"> Soldaduras y trabajos con Hidrobronz y plomo</li>
-                            <li class="list-group-item service-item bold">¡PRESUPUESTOS SIN CARGO!</li>
+                            <li class="list-group-item service-item bold"><img class="check" src="./assets/checked.png"
+                                    alt="check"> ¡PRESUPUESTOS SIN CARGO!</li>
                         </ul>
                     </div>
                 </div>
@@ -139,53 +151,41 @@
             </div>
         </div>
     </section>
-    <section id="nosotros" class="center">
-        <div class="card card-services" style="width: 90%;">
-            <div class="card-body title-services">¿Quiénes somos?</div>
-            <div class="card-body">
-                <ul class="list-group">
-                    <li class="list-group-item us-item">
-                        Formamos una empresa en la cual combinamos un servicio de calidad, con precios altamente
-                        competitivos.
-                    </li>
-                    <li class="list-group-item us-item">
-                        Realizando trabajos con compromiso, puntualidad y responsabilidad.
-                    </li>
-                    <li class="list-group-item us-item">
-                        Servicios en todo CABA, Argentina.
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </section>
     <section id="contacto" class="center">
         <div class="card card-services" style="width: 90%;">
             <div class="card-body title-services">¡Contactanos!</div>
             <div class="card-body">
                 <div class="row">
                     <div class="col center">
-                        <ul class="list-group">
+                        <ul class="list-group center">
                             <li class="list-group-item contact-item">Teléfonos:
                             </li>
-                            <li class="list-group-item contact-item">+54 9 11 2351-1146
-                            </li>
-                            <li class="list-group-item contact-item">+54 9 11 2241-0473
-                            </li>
+                            <div class="d-flex flex-row tel-group">
+                                <li class="list-group-item contact-item"><a href="tel:+54 9 11 2351-1146">
+                                    <img class="wp invert-color"
+                                            src="./assets/phone-call.png">+54 9 11 2351-1146</a>
+                                </li>
+                                <li class="list-group-item contact-item"> <a href="+54 9 11 2241-0473">
+                                    <img class="wp invert-color"
+                                            src="./assets/phone-call.png">+54 9 11 2241-0473</a>
+                                </li>
+                            </div>
                         </ul>
                     </div>
                     <div class="col center">
                         <ul class="list-group">
                             <li class="list-group-item contact-item">Whatsapp:
                             </li>
-                            <li class="list-group-item center wp-item">
-                                <a target="_blank" href="https://walink.co/220607"><img class="wp"
-                                        src="./assets/whatsapp.png"></a>
-                            </li>
-                            <li class="list-group-item center wp-item">
-                                <a target="_blank" href="https://walink.co/2e8624"><img class="wp"
-                                        src="./assets/whatsapp.png"></a>
-                            </li>
-                            </li>
+                            <div class="d-flex flex-row">
+                                <li class="list-group-item center wp-item">
+                                    <a target="_blank" href="https://walink.co/220607"><img class="wp"
+                                            src="./assets/whatsapp.png"></a>
+                                </li>
+                                <li class="list-group-item center wp-item">
+                                    <a target="_blank" href="https://walink.co/2e8624"><img class="wp"
+                                            src="./assets/whatsapp.png"></a>
+                                </li>
+                            </div>
                         </ul>
                     </div>
                     <ul class="list-group center">
