--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                         </ul>
                     </div>
                     <ul class="list-group center">
-                        <li class="list-group-item center e-mail-item contact-item">plomeriapragma@gmail.com</li>
+                        <li class="list-group-item center e-mail-item contact-item">pragmaplomeria@gmail.com</li>
                     </ul>
                 </div>
             </div>
