--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="card card-services" style="width: 90%;">
             <div class="card-body title-services">¡Contactanos!</div>
             <div class="card-body">
-                <div class="row">
+                <div class="row tel-group">
                     <div class="col center">
                         <ul class="list-group center">
                             <li class="list-group-item contact-item">Teléfonos:
