--- a/index.html
+++ b/index.html
@@ -189,7 +189,10 @@
                         </ul>
                     </div>
                     <ul class="list-group center">
-                        <li class="list-group-item center e-mail-item contact-item">pragmaplomeria@gmail.com</li>
+                        <li class="list-group-item center e-mail-item contact-item">
+                            <a href="mailto:pragmaplomeria@gmail.com?Subject=Presupuesto%20-%20Pragma%20Plomeria">pragmaplomeria@gmail.com</a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
