--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </section>
     <section id="presupuesto" class="center">
         <div class="card card-services" style="width: 90%;">
-            <div class="card-body title-services">¿Quiénes somos?</div>
+            <div class="card-body title-services">¡Pedinos un presupuesto!</div>
             <div class="card-body">
                 <form id="form">
                     <div class="mb-3">
