--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <div class="banner">
             <div class="card card2">
                 <div class="card-body card-body2">
-                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio al
-                        mejor precio.</h5>
+                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio.</h5>
                     <p class="card-text card-text2">GARANTÍA ASEGURADA.</p>
                 </div>
             </div>
@@ -73,7 +72,7 @@
         <div class="card card-services" style="width: 90%;">
             <div class="card-body title-services">¿Qué servicios ofrecemos?</div>
             <div class="card-body">
-                <div class="row">
+                <div class="row row-services">
                     <div class="col">
                         <ul class="list-group">
                             <li class="list-group-item service-item"><img class="check" src="./assets/checked.png"
@@ -90,8 +89,15 @@
                                     alt="check"> Tanques y colectores</li>
                             <li class="list-group-item service-item"><img class="check" src="./assets/checked.png"
                                     alt="check"> Soldaduras y trabajos con Hidrobronz y plomo</li>
-                            <li class="list-group-item service-item bold"><img class="check" src="./assets/checked.png"
-                                    alt="check"> ¡PRESUPUESTOS SIN CARGO!</li>
+                            <li class="list-group-item service-item"><img class="check" src="./assets/checked.png"
+                                    alt="check"> Obra nueva y remodelaciones</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <ul class="list-group center">
+                            <li class="list-group-item service-item pres bold">¡PRESUPUESTO SIN CARGO!</li>
                         </ul>
                     </div>
                 </div>
