--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/da5b8f04e0.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -43,7 +44,8 @@
         <div class="banner">
             <div class="card card2">
                 <div class="card-body card-body2">
-                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio.</h5>
+                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio.
+                    </h5>
                     <p class="card-text card-text2">GARANTÍA ASEGURADA.</p>
                 </div>
             </div>
@@ -168,12 +170,12 @@
                             </li>
                             <div class="d-flex flex-row tel-group">
                                 <li class="list-group-item contact-item"><a href="tel:+54 9 11 2351-1146">
-                                    <img class="wp invert-color"
-                                            src="./assets/phone-call.png">+54 9 11 2351-1146</a>
+                                        <img class="wp invert-color" src="./assets/phone-call.png">+54 9 11
+                                        2351-1146</a>
                                 </li>
                                 <li class="list-group-item contact-item"> <a href="+54 9 11 2241-0473">
-                                    <img class="wp invert-color"
-                                            src="./assets/phone-call.png">+54 9 11 2241-0473</a>
+                                        <img class="wp invert-color" src="./assets/phone-call.png">+54 9 11
+                                        2241-0473</a>
                                 </li>
                             </div>
                         </ul>
@@ -196,7 +198,8 @@
                     </div>
                     <ul class="list-group center">
                         <li class="list-group-item center e-mail-item contact-item">
-                            <a href="mailto:pragmaplomeria@gmail.com?Subject=Presupuesto%20-%20Pragma%20Plomeria">pragmaplomeria@gmail.com</a>
+                            <a
+                                href="mailto:pragmaplomeria@gmail.com?Subject=Presupuesto%20-%20Pragma%20Plomeria">pragmaplomeria@gmail.com</a>
                         </li>
 
                     </ul>
@@ -205,7 +208,7 @@
         </div>
     </section>
     <a href="https://walink.co/220607" class="float" target="_blank">
-        <i class="fa fa-whatsapp my-float"></i>
+        <img class="wp-float" src="./assets/whatsapp.png">
     </a>
     <footer class="center">
         Powered by Lautaro Quevedo
