--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="banner">
             <div class="card card2">
                 <div class="card-body card-body2">
-                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio.
+                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio de excelencia.
                     </h5>
                     <p class="card-text card-text2">GARANTÍA ASEGURADA.</p>
                 </div>
