--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="banner">
             <div class="card card2">
                 <div class="card-body card-body2">
-                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar el mejor servicio de excelencia.
+                    <h5 class="card-title card-title2">Plomería 24 hs. - El compromiso de brindar un servicio de
+                        excelencia.
                     </h5>
                     <p class="card-text card-text2">GARANTÍA ASEGURADA.</p>
                 </div>
@@ -169,26 +170,23 @@
                             <li class="list-group-item contact-item">Teléfonos:
                             </li>
                             <div class="d-flex flex-row tel-group">
-                                <li class="list-group-item contact-item"><a href="tel:+54 9 11 2351-1146">
+                                <li class="list-group-item contact-item"> <a href="+54 9 11 2241-0473">
+                                        <img class="wp invert-color" src="./assets/phone-call.png">
+                                    +54 9 112241-0473</a>
+                                </li>
+                                <li class="list-group-item contact-item center"><a href="tel:+54 9 11 2351-1146">
                                         <img class="wp invert-color" src="./assets/phone-call.png">+54 9 11
                                         2351-1146</a>
-                                </li>
-                                <li class="list-group-item contact-item"> <a href="+54 9 11 2241-0473">
-                                        <img class="wp invert-color" src="./assets/phone-call.png">+54 9 11
-                                        2241-0473</a>
+                                        <p>(Urgencias 24 hs.)</p>
                                 </li>
                             </div>
                         </ul>
                     </div>
                     <div class="col center">
-                        <ul class="list-group">
+                        <ul class="list-group center">
                             <li class="list-group-item contact-item">Whatsapp:
                             </li>
                             <div class="d-flex flex-row">
-                                <li class="list-group-item center wp-item">
-                                    <a target="_blank" href="https://walink.co/220607"><img class="wp"
-                                            src="./assets/whatsapp.png"></a>
-                                </li>
                                 <li class="list-group-item center wp-item">
                                     <a target="_blank" href="https://walink.co/2e8624"><img class="wp"
                                             src="./assets/whatsapp.png"></a>
@@ -207,7 +205,7 @@
             </div>
         </div>
     </section>
-    <a href="https://walink.co/220607" class="float" target="_blank">
+    <a href="https://walink.co/2e8624" class="float" target="_blank">
         <img class="wp-float" src="./assets/whatsapp.png">
     </a>
     <footer class="center">
